--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,15 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
     buildToolsVersion "25.0.0"
+    useLibrary 'org.apache.http.legacy'
+
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+
     defaultConfig {
         applicationId "com.epicodus.myrestaurants"
         minSdkVersion 15
@@ -12,13 +18,26 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/LGPL2.1'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/notice.txt'
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    useLibrary 'org.apache.http.legacy'
     buildTypes.each {
         it.buildConfigField 'String', 'YELP_CONSUMER_KEY', YelpConsumerKey
         it.buildConfigField 'String', 'YELP_CONSUMER_SECRET', YelpConsumerSecret
@@ -27,10 +46,7 @@ android {
     }
 }
 
-repositories {
-    mavenCentral()
-    jcenter()
-}
+apply plugin: 'com.neenbedankt.android-apt'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -48,5 +64,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'org.parceler:parceler-api:1.1.1'
+    compile 'com.google.firebase:firebase-database:9.2.1'
     apt 'org.parceler:parceler:1.1.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
